<resources>
    <string name="app_name">GamlaHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Shopping Cart</item>
        <item>Your Order</item>
        <item>Your WishList</item>
        <item>Todays Deal(Gamla Hub Exclusive)</item>
        <item>Indoor Plants</item>
        <item>Outdoor Plants</item>
        <item>Pots</item>
        <item>Antiques With Plants</item>
        <item>Fruit Plants</item>
        <item>Fertilizer and Pestisides</item>
        <item>Seeds</item>
        <item>Landscapers</item>
        <item>Gardening Tools</item>
    </string-array>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Product</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="rateus">Rate Us</string>
    <string name="shareapp">Share App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sortby">Sort By</string>
    <string name="filter">Filters</string>
    <string name="brand">Product Type</string>
    <string name="color">Color</string>
    <string name="catagory">Category</string>
    <string name="done">Done</string>
    <string name="yourorder">Your Order</string>
    <string name="yourwishlist">Your WishList</string>
    <string name="todaysdeal">Todays Deal(Gamla Hub Exclusive)</string>
    <string name="IndoorPlants">Indoor Plants</string>
    <string name="outdoorplants">Outdoor Plants</string>
    <string name="Pots">Pots</string>
    <string name="Antiquies_with_plants">Antiques With Plants</string>
    <string name="FruitPlants">Fruit Plants</string>
    <string name="Fertilizer_Pestisides">Fertilizer and Pestisides</string>
    <string name="seeds">Seeds</string>
    <string name="Landscapers">Landscapers</string>
    <string name="title_activity_filter_plants">FilterPlants</string>
    <string name="title_activity_filter_by_product">FilterByProduct</string>
    <string name="title_activity_item_bag">ItemBag</string>
    <string name="soldby">Sold By</string>
    <string name="soldbyname">Kalyanpur Nursery</string>
    <string name="deliveryadress">Select delivery address</string>
    <string name="gardening">Gardening Tools</string>
    <string name="title_activity_product_category_fragment">ProductCategoryFragment</string>
    <string name="logintoproceed">Login to Proceed</string>
    <string name="nav_cart">Shopping Cart</string>
    <string name="shopbycategory">Shop By Category</string>
    <string name="cart">Cart</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="title_activity_tt">tt</string>
    <string name="aboutus">Gamlahub.com (Truegarden Agro Private
 Limited) is India’s young and growing online plant
and gardening store. With over thousand’s of products to choose in various categories to
make you A happy gamlahub customer. you will find everything you are looking for.
Right from all Types Plants, pots, seeds, gardening accessories, landscapers, fertilizers
and Pesticides, Lawn services and many more.
Our payment partners and shipping partners ensure a safe and comfortable shopping experience for you.
</string>
    <string name="refund_policy">

        Returns\n\n

Our policy lasts 30 days. If 30 days have gone by since your purchase, unfortunately we can’t offer you a refund or exchange.


To be eligible for a return, your item must be unused and in the same condition that you received it. It must also be in the original packaging.


Several types of goods are exempt from being returned. Perishable goods such as food, flowers, newspapers or magazines cannot be returned. We also do not accept products that are intimate or sanitary goods, hazardous materials, or flammable liquids or gases.\n\n


Additional non-returnable items:\n\n

Gift cards\n
Downloadable software products\n
Some health and personal care items\n\n

To complete your return, we require a receipt or proof of purchase.\n


Please do not send your purchase back to the manufacturer.\n


There are certain situations where only partial refunds are granted: (if applicable)\n

Book with obvious signs of use\n

CD, DVD, VHS tape, software, video game, cassette tape, or vinyl record that has been opened.\n

Any item not in its original condition, is damaged or missing parts for reasons not due to our error.

Any item that is returned more than 30 days after delivery\n\n\n


Refunds (if applicable)\n\n

Once your return is received and inspected, we will send you an email to notify you that we have received your returned item. We will also notify you of the approval or rejection of your refund.

If you are approved, then your refund will be processed, and a credit will automatically be applied to your credit card or original method of payment, within a certain amount of days.\n\n\n


Late or missing refunds (if applicable)\n\n

If you haven’t received a refund yet, first check your bank account again.

Then contact your credit card company, it may take some time before your refund is officially posted.

Next contact your bank. There is often some processing time before a refund is posted.

If you’ve done all of this and you still have not received your refund yet, please contact us at info.gamlahub@gmail.com.\n\n\n


Sale items (if applicable)\n\n

Only regular priced items may be refunded, unfortunately sale items cannot be refunded.\n\n\n


Exchanges (if applicable)\n\n

We only replace items if they are defective or damaged.  If you need to exchange it for the same item, send us an email at info.gamlahub@gmail.com and send your item to: 18 Radhapuram Gova Garden Road KalyanPur Kanpur 208016.\n\n\n


Gifts\n\n

If the item was marked as a gift when purchased and shipped directly to you, you’ll receive a gift credit for the value of your return. Once the returned item is received, a gift certificate will be mailed to you.


If the item wasn’t marked as a gift when purchased, or the gift giver had the order shipped to themselves to give to you later, we will send a refund to the gift giver and he will find out about your return.\n\n\n


Shipping\n\n

To return your product, you should mail your product to: 18 Radhapuram Gova Garden Road Kalyanpur Kanpur 208016.


You will be responsible for paying for your own shipping costs for returning your item. Shipping costs are non-refundable. If you receive a refund, the cost of return shipping will be deducted from your refund.


Depending on where you live, the time it may take for your exchanged product to reach you, may vary.


If you are shipping an item over $75, you should consider using a trackable shipping service or purchasing shipping insurance. We don’t guarantee that we will receive your returned item.\n\n
    </string>
</resources>