<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"

        android:layout_marginTop="10dp"
        android:text="PRICE"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@android:color/white">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="MIN" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:text="MAX" />

            <TextView
                android:id="@+id/min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView"
                android:text="TextView"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize"
                android:textStyle="bold"
                tools:text="0" />

            <TextView
                android:id="@+id/max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView2"
                android:text="2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@android:color/white"
            android:gravity="center">

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/rangeSeekbar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:bar_highlight_color="@color/colorPrimaryDark"
                app:left_thumb_color="@color/skyblue"
                app:left_thumb_color_pressed="#20CAED"
                app:right_thumb_color="@color/skyblue"
                app:right_thumb_color_pressed="#20CAED" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/catogry"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/catagory"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:id="@+id/producttype"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/brand"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/color"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize"


                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </RelativeLayout>


    </LinearLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
       android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@android:color/white"

            android:textSize="@dimen/textsize" />

    </LinearLayout>
</FrameLayout>
</LinearLayout>
